# t-SMILES

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/t_smiles/: __init__.py
src/t_smiles/DataSet/: STDTokens.py  Tokenlizer.py  Utils.py  __init__.py
src/t_smiles/DataSet/Graph/: CNJMolAssembler - Copy.py  CNJMolAssembler.py  CNJMolUtil.py  CNJTMol.py  CNXBinaryTree.py
src/t_smiles/DataSet/JTNN/: ChemUtils.py  MolTree.py
src/t_smiles/MolUtils/RDKUtils/: RDKAssembling.py  RDKEdit.py  RDKEnumerator.py  Utils.py
src/t_smiles/MolUtils/RDKUtils/Frag/: RDKFragBrics.py  RDKFragBricsDummy.py  RDKFragMMPA.py  RDKFragRBrics.py  RDKFragScaffold.py  RDKFragUtil.py
src/t_smiles/MolUtils/RDKUtils/Scaffold/: RDKScaffold.py
src/t_smiles/MolUtils/rBRICS/: rBRICS_public.py
src/t_smiles/Tools/: GraphTools.py  MathUtils.py  StringUtils.py
t-SMILES/: test.ipynb  test.py
