[project]
name = "t-smiles"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jsture", email = "jakobsturemadsen@gmail.com" }
]
dependencies = [
    "torch>=2.5.1",
    "rdkit>=2024.9.4",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "scipy>=1.15.1",
    "networkx>=3.4.2",
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
    "jupyterlab>=4.3.4",
    "datamol>=0.12.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/t_smiles"]
