[project]
name = "t-smiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamol>=0.12.5",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "python-levenshtein>=0.26.1",
    "rdkit>=2020.3",
    "ruff>=0.9.6",
    "scipy>=1.15.2",
    "torch>=2.6.0",
]
